[metadata]
name = au
version = 0.0.7
url = https://github.com/thorwhalen/uu/tree/master/au
platforms = any
description_file = README.md
description = Filtering outliers
root_url = https://github.com/thorwhalen/uu/tree/master/
author = Thor Whalen
license = apache-2.0
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = au

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	numpy
	scikit-learn

