[metadata]
name = bj
version = 0.0.3
url = https://github.com/thorwhalen/ut/tree/master/stats/dgen/hierarchical_data.py
platforms = any
description_file = README.md
description = Generating hierarchical data
root_url = https://github.com/thorwhalen/ut/tree/master/
author = Thor Whalen
license = apache-2.0
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = bj

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 

