[metadata]
name = by
version = 0.0.3
url = https://github.com/thorwhalen/ut/blob/master/pcoll/select.py
platforms = any
description_file = README.md
root_url = https://github.com/thorwhalen/ut/blob/master/pcoll/
license = mit
author = Thor Whalen
description = selection tools
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = by

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 

