[metadata]
name = by
version = 0.0.6
url = https://github.com/thorwhalen/uu/tree/master/by
platforms = any
description_file = README.md
root_url = https://github.com/thorwhalen/ut/blob/master/pcoll/
license = mit
author = Thor Whalen
description = selection tools
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
		matching
		pairs
		intervals
		selection
		nearest neighbors
display_name = by

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	numpy
	scikit-learn

