[metadata]
name = ef
version = 0.0.3
url = https://github.com/thorwhalen/ut/tree/master/dpat/buffer.py
platforms = any
description_file = README.md
description = An example of connecting the flush of one buffer to the push of another.
root_url = https://github.com/thorwhalen/ut/tree/master/
author = Thor Whalen
license = apache-2.0
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = ef

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 

