[metadata]
name = eu
version = 0.0.3
url = https://github.com/thorwhalen/uu/tree/master/eu
platforms = any
description_file = README.md
description = It's good practice to write code that can be run as is on someone elses computer (or server).
root_url = https://github.com/thorwhalen/uu/tree/master/
author = Thor Whalen
license = apache-2.0
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = eu

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 

