[metadata]
name = ge
version = 0.0.3
url = https://github.com/thorwhalen/uu/tree/master/ge
platforms = any
description_file = README.md
description = Utils for training models
root_url = https://github.com/thorwhalen/uu/tree/master/
author = Thor Whalen
license = apache-2.0
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = ge

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 

