[metadata]
name = ha
version = 0.0.5
url = https://github.com/thorwhalen/uu/tree/master/ha
platforms = any
description_file = README.md
root_url = https://github.com/thorwhalen/
license = mit
author = Thor Whalen
description = joke tools
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = ha

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	dol
	graze
	config2py

[options.extras_require]
optional_deps = 
	laugh
	pyjokes

