[metadata]
name = jo
version = 0.0.3
url = https://github.com/thorwhalen/ut/tree/master/wserv/flask_wrap.py
platforms = any
description_file = README.md
description = Automatically making flask webservices from python objects
root_url = https://github.com/thorwhalen/ut/tree/master/
author = Thor Whalen
license = apache-2.0
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = jo

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 

