[metadata]
name = lb
version = 0.0.4
url = https://github.com/thorwhalen/uu/tree/master/lb
platforms = any
description_file = README.md
description = utils for ipython importing
root_url = https://github.com/thorwhalen/uu/tree/master/
author = Thor Whalen
license = apache-2.0
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = lb

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 

