[metadata]
name = nh
version = 0.0.3
url = https://github.com/thorwhalen/ut/tree/master/util/data_flow.py
platforms = any
description_file = README.md
description = framework for data flow
root_url = https://github.com/thorwhalen/ut/tree/master/
author = Thor Whalen
license = apache-2.0
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = nh

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 

