[metadata]
name = nw
version = 0.0.3
url = https://github.com/thorwhalen/ut/tree/master/ml/association/fp_tree.py
platforms = any
description_file = README.md
description = Association mining
root_url = https://github.com/thorwhalen/ut/tree/master/
author = Thor Whalen
license = apache-2.0
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = nw

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 

