[metadata]
name = su
version = 0.0.4
url = https://github.com/thorwhalen/uu/tree/master/su
platforms = any
description_file = README.md
description = Debugging tools
root_url = https://github.com/thorwhalen/uu/tree/master/
author = Thor Whalen
license = apache-2.0
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = su

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 

